fix: move healthcheck to route
